force-app/main/default/objects/Contract__c/Contract__c.object-meta.xml
<CustomObject>
    <label>Kontrakt</label>
    <nameField>
        <displayFormat>K-{YYYY}{MM}-{0}</displayFormat>
        <label>Serial Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kontrakter</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>