force-app/main/default/objects/Contract__c/fields/Account_Owner_KA__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_KA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Kundeansvarlig</inlineHelpText>
    <label>Account Owner (KA)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Kontrakter</relationshipName>
    <type>Lookup</type>
</CustomField>