force-app/main/default/objects/Contract__c/fields/Additional_controls_cf_GFRS_7__c.field-meta.xml
<CustomField>
    <fullName>Additional_controls_cf_GFRS_7__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The frequency and scope of the quality control may vary, based on a documented assessment of the employee&apos;s competence, capacity and experience, as well as the client&apos;s routines and the complexity of the assignment. The assessment is documented in Account Info.</inlineHelpText>
    <label>Additional controls cf. GFRS 7</label>
    <type>Checkbox</type>
</CustomField>