force-app/main/default/objects/Contract__c/fields/Approved_general_terms__c.field-meta.xml
<CustomField>
    <fullName>Approved_general_terms__c</fullName>
    <label>Approved general terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>