force-app/main/default/objects/Contract__c/fields/Assignment_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Authorized Accountant</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Authorized Accountant not found, check spelling.</errorMessage>
        <filterItems>
            <field>User.Is_Authorized_Accountant__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Kontrakter_oa</relationshipName>
    <type>Lookup</type>
</CustomField>