force-app/main/default/objects/Contract__c/fields/Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account__c</fullName>
    <label>Bank Account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>