force-app/main/default/objects/Contract__c/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If billing to another account than current</inlineHelpText>
    <label>Billing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agreements (Billing Account)</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>