force-app/main/default/objects/Contract__c/fields/Business_Area__c.field-meta.xml
<CustomField>
    <fullName>Business_Area__c</fullName>
    <label>Business Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Xledger</fullName>
            </value>
            <value>
                <fullName>Tripletex</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>