force-app/main/default/objects/Contract__c/fields/CertifiedAccountant__c.field-meta.xml
<CustomField>
    <fullName>CertifiedAccountant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certified Accountant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts9</relationshipName>
    <type>Lookup</type>
</CustomField>