force-app/main/default/objects/Contract__c/fields/Closing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Closing_Frequency__c</fullName>
    <label>Closing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Bi-monthly</fullName>
                <default>true</default>
                <label>Bi-monthly</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Tertial</fullName>
            </value>
            <value>
                <fullName>Biannual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>