force-app/main/default/objects/Contract__c/fields/Contract_Format__c.field-meta.xml
<CustomField>
    <fullName>Contract_Format__c</fullName>
    <inlineHelpText>If Merger Contract, Other Contract or missing, new contract needs to be created</inlineHelpText>
    <label>Contract Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>View contract</fullName>
                <default>true</default>
                <label>VIEW Contract</label>
            </value>
            <value>
                <fullName>View deviating</fullName>
                <label>VIEW Contract deviating</label>
            </value>
            <value>
                <fullName>SSA Contract</fullName>
            </value>
            <value>
                <fullName>Fusion contract</fullName>
                <label>Merger Contract</label>
            </value>
            <value>
                <fullName>RN Contract</fullName>
                <label>Other Contract</label>
            </value>
            <value>
                <fullName>Missing Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>