force-app/main/default/objects/Contract__c/fields/Contract_Number1__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number1__c</fullName>
    <formula>MID(Name, 10, 10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Number</label>
    <type>Text</type>
</CustomField>