force-app/main/default/objects/Contract__c/fields/ContractSignatureDate__c.field-meta.xml
<CustomField>
    <fullName>ContractSignatureDate__c</fullName>
    <label>Contract Signature Date</label>
    <type>Date</type>
</CustomField>