force-app/main/default/objects/Contract__c/fields/Cost_Centre__c.field-meta.xml
<CustomField>
    <fullName>Cost_Centre__c</fullName>
    <inlineHelpText>Koststed</inlineHelpText>
    <label>Cost Centre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>01 Oslo Felles</fullName>
                <isActive>false</isActive>
                <label>01 Oslo Felles</label>
            </value>
            <value>
                <fullName>02 Fagteam Xledger Oslo</fullName>
            </value>
            <value>
                <fullName>02 Oslo VSC Medium-Large</fullName>
                <isActive>false</isActive>
                <label>02 Oslo VSC Medium-Large</label>
            </value>
            <value>
                <fullName>03 Fagteam Tripletex Oslo</fullName>
            </value>
            <value>
                <fullName>03 Oslo VSC Small-Medium</fullName>
                <isActive>false</isActive>
                <label>03 Oslo VSC Small-Medium</label>
            </value>
            <value>
                <fullName>04 Fagteam Lønn/HR Oslo</fullName>
            </value>
            <value>
                <fullName>04 Oslo Payroll-HR</fullName>
                <isActive>false</isActive>
                <label>04 Oslo Payroll-HR</label>
            </value>
            <value>
                <fullName>05 Advisory Oslo</fullName>
            </value>
            <value>
                <fullName>05 Consulting Oslo</fullName>
                <isActive>false</isActive>
                <label>05 Consulting Oslo</label>
            </value>
            <value>
                <fullName>05 Oslo Consulting</fullName>
                <isActive>false</isActive>
                <label>05 Oslo Consulting</label>
            </value>
            <value>
                <fullName>06 Ålesund</fullName>
            </value>
            <value>
                <fullName>07 Bergen</fullName>
            </value>
            <value>
                <fullName>10 Sandefjord</fullName>
                <isActive>false</isActive>
                <label>10 Sandefjord</label>
            </value>
            <value>
                <fullName>10 Stockholm Xledger</fullName>
            </value>
            <value>
                <fullName>10 System Sweden</fullName>
                <isActive>false</isActive>
                <label>10 System Sweden</label>
            </value>
            <value>
                <fullName>11 Maritime</fullName>
            </value>
            <value>
                <fullName>11 Stockholm Team 1</fullName>
            </value>
            <value>
                <fullName>12 Haugesund</fullName>
            </value>
            <value>
                <fullName>12 Stockholm Team 2</fullName>
            </value>
            <value>
                <fullName>13 Stockholm Team 3</fullName>
            </value>
            <value>
                <fullName>14 Stockholm Team 4</fullName>
            </value>
            <value>
                <fullName>14 Søgne</fullName>
            </value>
            <value>
                <fullName>15 Kristiansand</fullName>
            </value>
            <value>
                <fullName>15 Stockholm Team 5</fullName>
            </value>
            <value>
                <fullName>16 Lillehammer</fullName>
            </value>
            <value>
                <fullName>16 Stockholm Avdelingschef</fullName>
            </value>
            <value>
                <fullName>17.2 Stavanger</fullName>
                <isActive>false</isActive>
                <label>17.2 Stavanger</label>
            </value>
            <value>
                <fullName>171 Stavanger Xledger</fullName>
            </value>
            <value>
                <fullName>172 Stavanger Tripletex</fullName>
            </value>
            <value>
                <fullName>17 Stavanger</fullName>
                <isActive>false</isActive>
                <label>17 Stavanger</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>