force-app/main/default/objects/Contract__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NO - Norge</fullName>
                <label>NO - Norway</label>
            </value>
            <value>
                <fullName>SE - Sweden</fullName>
            </value>
            <value>
                <fullName>DK - Denmark</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>