force-app/main/default/objects/Contract__c/fields/Customer_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group__c</fullName>
    <inlineHelpText>Kundegruppe</inlineHelpText>
    <label>Customer Group</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ERP_System__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>(T 50) Systemkunde</fullName>
                <isActive>false</isActive>
                <label>(T 50) Systemkunde</label>
            </value>
            <value>
                <fullName>(T 60) GMS</fullName>
                <isActive>false</isActive>
                <label>(T 60) GMS</label>
            </value>
            <value>
                <fullName>Årskunde</fullName>
            </value>
            <value>
                <fullName>Flex</fullName>
            </value>
            <value>
                <fullName>Forening</fullName>
            </value>
            <value>
                <fullName>Maxi</fullName>
                <isActive>false</isActive>
                <label>Maxi</label>
            </value>
            <value>
                <fullName>Mikro</fullName>
                <isActive>false</isActive>
                <label>Mikro</label>
            </value>
            <value>
                <fullName>Mini</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Premium Large</fullName>
            </value>
            <value>
                <fullName>To be advised</fullName>
                <isActive>false</isActive>
                <label>To be advised</label>
            </value>
            <value>
                <fullName>Tripletex Basis</fullName>
            </value>
            <value>
                <fullName>Tripletex fastpris</fullName>
                <isActive>false</isActive>
                <label>Tripletex fastpris</label>
            </value>
            <value>
                <fullName>Tripletex fastpris (frilans)</fullName>
                <isActive>false</isActive>
                <label>Tripletex fastpris (frilans)</label>
            </value>
            <value>
                <fullName>Tripletex holding (frilans)</fullName>
                <isActive>false</isActive>
                <label>Tripletex holding (frilans)</label>
            </value>
            <value>
                <fullName>Tripletex Komplett</fullName>
            </value>
            <value>
                <fullName>Tripletex Mikro</fullName>
            </value>
            <value>
                <fullName>Tripletex Smart</fullName>
            </value>
            <value>
                <fullName>Tripletex Timepris</fullName>
                <isActive>false</isActive>
                <label>Tripletex Timepris</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>