force-app/main/default/objects/Contract__c/fields/CustomerResponsibleAndRemittanceResp__c.field-meta.xml
<CustomField>
    <fullName>CustomerResponsibleAndRemittanceResp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account owner and Remittance Resp</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts3</relationshipName>
    <type>Lookup</type>
</CustomField>