force-app/main/default/objects/Contract__c/fields/CustomersAccountingSystem__c.field-meta.xml
<CustomField>
    <fullName>CustomersAccountingSystem__c</fullName>
    <label>Customers Accounting System</label>
    <type>TextArea</type>
</CustomField>