force-app/main/default/objects/Contract__c/fields/Dataloader_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Dataloader_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to do update with dataloader to trigger Kontrakt Process.</description>
    <label>Dataloader Checkbox</label>
    <type>Checkbox</type>
</CustomField>