force-app/main/default/objects/Contract__c/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <defaultValue>&quot;Services&quot;</defaultValue>
    <label>Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Delivery</valueSetName>
    </valueSet>
</CustomField>