force-app/main/default/objects/Contract__c/fields/Delivery_From_Account__c.field-meta.xml
<CustomField>
    <fullName>Delivery_From_Account__c</fullName>
    <formula>Account__r.Delivery__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery From Account</label>
    <type>Text</type>
</CustomField>