force-app/main/default/objects/Contract__c/fields/Deviation_from_general_terms__c.field-meta.xml
<CustomField>
    <fullName>Deviation_from_general_terms__c</fullName>
    <label>Deviation from general terms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Acquired companies (Merger contract)</fullName>
            </value>
            <value>
                <fullName>Deviating processing of personal data (other data processing agreement)</fullName>
            </value>
            <value>
                <fullName>Deviation from general terms</fullName>
            </value>
            <value>
                <fullName>Notice of price change</fullName>
            </value>
            <value>
                <fullName>Notice period</fullName>
            </value>
            <value>
                <fullName>Payment terms</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Use of another SSA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>