force-app/main/default/objects/Contract__c/fields/Do_Not_Create_Action_Plan_Automatically__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Create_Action_Plan_Automatically__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Create Action Plan Automatically</label>
    <type>Checkbox</type>
</CustomField>