force-app/main/default/objects/Contract__c/fields/Employee_1__c.field-meta.xml
<CustomField>
    <fullName>Employee_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts5</relationshipName>
    <type>Lookup</type>
</CustomField>