force-app/main/default/objects/Contract__c/fields/Employee_2__c.field-meta.xml
<CustomField>
    <fullName>Employee_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts6</relationshipName>
    <type>Lookup</type>
</CustomField>