force-app/main/default/objects/Contract__c/fields/Employee_3__c.field-meta.xml
<CustomField>
    <fullName>Employee_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts7</relationshipName>
    <type>Lookup</type>
</CustomField>