force-app/main/default/objects/Contract__c/fields/ERP_System__c.field-meta.xml
<CustomField>
    <fullName>ERP_System__c</fullName>
    <label>ERP System</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Briljant</fullName>
            </value>
            <value>
                <fullName>Fortnox</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Tripletex</fullName>
            </value>
            <value>
                <fullName>Uni Economy</fullName>
            </value>
            <value>
                <fullName>Xledger</fullName>
            </value>
            <value>
                <fullName>Marathon</fullName>
            </value>
            <value>
                <fullName>24SevenOffice</fullName>
            </value>
            <value>
                <fullName>Luca</fullName>
                <isActive>false</isActive>
                <label>Luca</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>