force-app/main/default/objects/Contract__c/fields/ERP_System_From_Account__c.field-meta.xml
<CustomField>
    <fullName>ERP_System_From_Account__c</fullName>
    <formula>Account__r.ERP_System__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP System from Account</label>
    <type>Text</type>
</CustomField>