force-app/main/default/objects/Contract__c/fields/Fiscal_Year_End__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year_End__c</fullName>
    <description>Used to show user what the end date is for the customers accounting year and secure correct planning.</description>
    <inlineHelpText>Used to show user what the end date is for the customers accounting year and secure correct planning.</inlineHelpText>
    <label>Fiscal Year End</label>
    <type>Date</type>
</CustomField>