force-app/main/default/objects/Contract__c/fields/Fiscal_Year_End_Month__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year_End_Month__c</fullName>
    <formula>IF( MONTH( Fiscal_Year_End__c )= 1,&apos;January&apos;,
IF( MONTH( Fiscal_Year_End__c )= 2,&apos;February&apos;,
IF( MONTH( Fiscal_Year_End__c )= 3,&apos;March&apos;,
IF( MONTH( Fiscal_Year_End__c )= 4,&apos;April&apos;,
IF( MONTH( Fiscal_Year_End__c )= 5,&apos;May&apos;,
IF( MONTH( Fiscal_Year_End__c )= 6,&apos;June&apos;,
IF( MONTH( Fiscal_Year_End__c )= 7,&apos;July&apos;,
IF( MONTH( Fiscal_Year_End__c )= 8,&apos;August&apos;,
IF( MONTH( Fiscal_Year_End__c )= 9,&apos;September&apos;,
IF( MONTH( Fiscal_Year_End__c )= 10,&apos;October&apos;,
IF( MONTH( Fiscal_Year_End__c )= 11,&apos;November&apos;,
IF( MONTH( Fiscal_Year_End__c )= 12,&apos;December&apos;,
&apos;No date&apos;))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Year End Month</label>
    <type>Text</type>
</CustomField>