force-app/main/default/objects/Contract__c/fields/FiscalYearStart__c.field-meta.xml
<CustomField>
    <fullName>FiscalYearStart__c</fullName>
    <defaultValue>DATE(YEAR(TODAY()),1,1)</defaultValue>
    <label>Fiscal Year Start</label>
    <type>Date</type>
</CustomField>