force-app/main/default/objects/Contract__c/fields/Grant_Edit_Permission__c.field-meta.xml
<CustomField>
    <fullName>Grant_Edit_Permission__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Grant Edit Permission</label>
    <type>Checkbox</type>
</CustomField>