force-app/main/default/objects/Contract__c/fields/High_risk_of_money_laundering__c.field-meta.xml
<CustomField>
    <fullName>High_risk_of_money_laundering__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High risk of money laundering</label>
    <type>Checkbox</type>
</CustomField>