force-app/main/default/objects/Contract__c/fields/IntegrationResource__c.field-meta.xml
<CustomField>
    <fullName>IntegrationResource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Integration Resource</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>