force-app/main/default/objects/Contract__c/fields/Invoice_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Delivery_Method__c</fullName>
    <inlineHelpText>Fakturaforsendelse</inlineHelpText>
    <label>Invoice Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>No Invoice</fullName>
            </value>
            <value>
                <fullName>Business Document Exchange</fullName>
                <isActive>false</isActive>
                <label>Business Document Exchange</label>
            </value>
            <value>
                <fullName>Internal</fullName>
                <isActive>false</isActive>
                <label>Internal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>