force-app/main/default/objects/Contract__c/fields/Invoice_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email_2__c</fullName>
    <inlineHelpText>If more than 1 extra invoice email, separate with semicolon</inlineHelpText>
    <label>Invoice Email 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>