force-app/main/default/objects/Contract__c/fields/Joint_use_of_IT_systems__c.field-meta.xml
<CustomField>
    <fullName>Joint_use_of_IT_systems__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The Customer uses an IT system for which View is the licensee and/or
View uses an IT system for which the Customer is the licensee</inlineHelpText>
    <label>Joint use of IT systems</label>
    <type>Checkbox</type>
</CustomField>