force-app/main/default/objects/Contract__c/fields/Outsourced__c.field-meta.xml
<CustomField>
    <fullName>Outsourced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outsourced</label>
    <type>Checkbox</type>
</CustomField>