force-app/main/default/objects/Contract__c/fields/Outsourcing_Sub_processor__c.field-meta.xml
<CustomField>
    <fullName>Outsourcing_Sub_processor__c</fullName>
    <label>Outsourcing Sub-processor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>Fintax</fullName>
            </value>
            <value>
                <fullName>Synergy</fullName>
            </value>
            <value>
                <fullName>Capitax</fullName>
                <isActive>false</isActive>
                <label>Capitax</label>
            </value>
            <value>
                <fullName>Gislen</fullName>
                <isActive>false</isActive>
                <label>Gislen</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>