force-app/main/default/objects/Contract__c/fields/PA_Reporting__c.field-meta.xml
<CustomField>
    <fullName>PA_Reporting__c</fullName>
    <defaultValue>&quot;Hourly Rate&quot;</defaultValue>
    <description>Price Agreement</description>
    <inlineHelpText>Agreed upon delivery model for Reporting</inlineHelpText>
    <label>PA - Reporting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Price</fullName>
            </value>
            <value>
                <fullName>Hourly Rate</fullName>
            </value>
            <value>
                <fullName>Unit Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>